# monthly-report-combine

./: .env  README.md  app.py  dataProcess.py  gsheet.py  pyproject.toml  requirements.txt  script (backup).py  script.py
